# warbot

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/agentic_bot/tools/: world_conflicts.py
src/warbot/: __init__.py  __main__.py  bot.py  config.py  stream_handler.py
src/warbot/tools/: __init__.py  base.py  location_risks.py  preparation_guidance.py  registry.py  world_conflicts.py
tests/: __init__.py  test_config.py  test_stream_handler.py
tests/tools/: __init__.py  test_preparation_guidance.py  test_registry.py  test_world_conflicts.py
